--- a/BxCore/plugin.yml
+++ b/BxCore/plugin.yml
@@ -1,8 +1,8 @@
 main: pl.bartixen.bxcore.Main
-version: 5.2.1
+version: 5.6.2
 author: Bartixen
 name: BxCore
-api-version: 1.17.1
+api-version: 1.17
 website: https://bartixen.pl
 description: Core serwera
 depend: [BxAuth]
@@ -196,3 +196,9 @@ commands:
     description: Ustawia daną szybkosc chodzenie/latanie dla gracza
   crafting:
     description: Otwiera crafting dla gracza
+  permission:
+    description: Wyswietla komendy do permisji
+  pex:
+    description: Wyswietla komendy do permisji
+  perm:
+    description: Wyswietla komendy do permisji
